clusters/my-cluster/front2/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: front2
  labels:
    app: front2
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: front2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front2
  labels:
    app: front2
spec:
  minReadySeconds: 5
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: front2
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9797"
      labels:
        app: front2
    spec:
      containers:
      - name: rollouts-demo
        image: ghcr.io/davidhaioum/front:5.0.3 # {"$imagepolicy": "front2:front2"} 
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
      imagePullSecrets:
      - name: regcred
