clusters/my-cluster/front2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front2
  labels:
    app: front2
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: front2
