clusters/my-cluster/front2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front2
  namespace: test
  labels:
    app: front2
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "app.example.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: front2
                port:
                  number: 80
